<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="@drawable/bg_layout">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="109dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ic_robot"
        android:contentDescription="@string/string_5" />
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="270dp"
        android:layout_gravity="center"
        android:background="@drawable/bottom_background"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="293dp"
            android:layout_height="27dp"
            android:text="@string/Email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="293dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edt"
            android:ems="10"
            android:hint="@string/Your_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="15sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_send_email"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:text="@string/Verify"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>