<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_layout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="137dp"
            android:layout_height="109dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/ic_robot"
            android:contentDescription="@string/string_5" />

    <LinearLayout
        android:id="@+id/layout_sign_in"
        android:layout_width="350dp"
        android:layout_height="470dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_layout_2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="293dp"
            android:layout_height="27dp"
            android:text="@string/Email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:hint="@string/Your_email"
                android:background="@drawable/bg_edt"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="293dp"
            android:layout_height="27dp"
            android:layout_marginTop="10dp"
            android:text="@string/Password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/Your_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="293dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_edt"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_2"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textColor="@color/black">

            <CheckBox
                android:id="@+id/ck_remember_password"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/remember_password"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_marginEnd="20dp"
                android:text="@string/dont_have_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/txt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:text="@string/Forget_Your_Password"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="201dp"
            android:layout_height="29dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:textColor="@color/black">

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#707070" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/OR"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#707070" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_4"
            android:layout_width="292dp"
            android:layout_height="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textColor="@color/black">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_facebook"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_instagram"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_twitch"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>