<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.SearchPicFragment"
    android:orientation="vertical"
    android:background="@drawable/bg_layout">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_1"
                android:contentDescription="@string/string_5" />
    </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/string_16"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="17sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/white"
                android:text="@string/string_17"/>
            <Button
                android:id="@+id/btn_try_now"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_gravity="center"
                android:text="@string/string_22"
                android:background="@drawable/bg_btn"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_2"
                android:contentDescription="@string/string_5"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/string_18"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="17sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/white"
                android:text="@string/string_19"/>
            <Button
                android:id="@+id/btn_try_now_2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:text="@string/string_22"
                android:background="@drawable/bg_btn"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">
            <ImageView
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_3"
                android:contentDescription="@string/string_5"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/string_20"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp"
                android:layout_marginStart="6dp"
                android:textColor="@color/white"
                android:text="@string/string_21"/>
            <Button
                android:id="@+id/btn_try_now_3"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_gravity="center"
                android:text="@string/string_22"
                android:background="@drawable/bg_btn"
                android:textAllCaps="false"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>