<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/chat_bot_activity"
    tools:context=".activity.MyLibraryActivity">

    <LinearLayout
        android:id="@+id/top_layout_pic"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_top_layout">


        <ImageView
            android:id="@+id/btn_back_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="120dp"
            android:contentDescription="@string/string_5"
            android:padding="10dp"
            app:srcCompat="@drawable/baseline_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/string_3"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintVertical_bias="0.52" />
        <ImageView
            android:id="@+id/btn_delete_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="120dp"
            app:srcCompat="@drawable/baseline_delete_24"
            android:contentDescription="@string/string_5" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_chat_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_layout_pic"
        android:layout_above="@id/bottom_layout_pic"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/bottom_layout_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_input_pic"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_background"
            android:drawableEnd="@drawable/ic_mic"
            android:inputType="text"
            android:hint="@string/string_1"
            android:padding="15dp"
            android:textSize="20sp"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/btn_send_mess_pic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/string_5"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_send" />
    </LinearLayout>


</RelativeLayout>